--- a/DrXama_gameJolt/gamejolt/logout.html
+++ b/DrXama_gameJolt/gamejolt/logout.html
@@ -12,7 +12,7 @@
             background-color: #1a1a1a;
         }
     </style>
-    <title>GameJolt Logout</title>
+    <title>GameJolt</title>
 </head>
 
 <body>
