--- a/DrXama_gameJolt/gamejolt/login.html
+++ b/DrXama_gameJolt/gamejolt/login.html
@@ -12,7 +12,7 @@
             background-color: #1a1a1a;
         }
     </style>
-    <title>GameJolt Login</title>
+    <title>GameJolt</title>
 </head>
 
 <body>
@@ -32,6 +32,9 @@
                         <input type="password" class="form-control" id="gametoken" aria-describedby="gametokenhelp">
                         <small id="gametokenhelp" class="form-text text-muted">
                             Não compartilhe seu Game Token com ninguém.
+                        </small>
+                        <small id="useralradylogged" class="form-text text-success">
+                            Usuário já está logado.
                         </small>
                         <small id="gametokeninvalid" class="form-text text-danger">
                             Game Token inválido.
@@ -65,6 +68,7 @@
         /**
          * Initialize
          */
+        $('#useralradylogged').hide();
         $('#gametokeninvalid').hide();
         $('#btn_login_loading').hide();
 
@@ -100,11 +104,12 @@
                 $('#label_username').text(res[0]);
                 $('#label_gametoken').text(res[1]);
                 $('#gametokenhelp').text(res[2]);
-                $('#gametokeninvalid').text(res[3]);
-                $('#btn_login').text(res[4]);
+                $('#useralradylogged').text(res[4]);
+                $('#gametokeninvalid').text(res[5]);
+                $('#btn_login').text(res[6]);
                 $('#btn_login_loading').html(`\
                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>\
-               ${res[5]}\
+               ${res[7]}\
                `);
             }
         })
@@ -118,6 +123,7 @@
             $('#username').prop('disabled', true);
             $('#gametoken').prop('disabled', true);
             $('#btn_login').hide();
+            $('#useralradylogged').hide();
             $('#gametokeninvalid').hide();
             $('#btn_login_loading').show();
 
@@ -130,7 +136,13 @@
                         $('#btn_login_loading').hide();
                         $('#gametokeninvalid').show();
                         $('#btn_login').show();
-                    } else {
+                    } else if (res.success === 'logged') {
+                        $('#username').prop('disabled', false);
+                        $('#gametoken').prop('disabled', false);
+                        $('#btn_login_loading').hide();
+                        $('#useralradylogged').show();
+                        $('#btn_login').show();
+                    } else if (res.success === 'success') {
                         $('#gametokeninvalid').hide();
                         $('#btn_login_loading').hide();
                         socket.connect(`/page/login/success/`);
